--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^1.1.1
+  firebase_core: ^0.4.5
+  firebase_auth: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
