--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   google_fonts: ^1.1.1
   firebase_core: ^0.4.5
   firebase_auth: ^0.16.1
+  cloud_firestore: ^0.13.6
+
 
 
   # The following adds the Cupertino Icons font to your application.
