--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^1.1.1
-  firebase_core: ^0.4.5
-  firebase_auth: ^0.16.1
-  cloud_firestore: ^0.13.6
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.18.0
+  cloud_firestore: ^0.14.0
+  rxdart: ^0.24.1
 
 
 
