--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   firebase_core: ^0.5.0
   firebase_auth: ^0.18.3
   cloud_firestore: ^0.14.0
-  rxdart: ^0.24.1
+  firebase_storage: ^4.0.0
 
 
 
