--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   firebase_auth: ^0.18.3
   cloud_firestore: ^0.14.0
   firebase_storage: ^4.0.0
+  image_picker: ^0.6.7+11
+  cached_network_image: ^2.2.0+1
 
 
 
