--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   firebase_storage: ^4.0.0
   image_picker: ^0.6.7+11
   cached_network_image: ^2.2.0+1
+  path_provider: ^1.6.24
+  # image_picker_web: any
 
 
 
