--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,11 @@ dependencies:
   google_fonts: ^1.1.1
   firebase_core: ^0.5.0
   firebase_auth: ^0.18.3
-  cloud_firestore: ^0.14.0
-  firebase_storage: ^4.0.0
-  image_picker: ^0.6.7+11
-  cached_network_image: ^2.2.0+1
-  path_provider: ^1.6.24
+  cloud_firestore: 
+  firebase_storage: 
+  image_picker: 
+  cached_network_image: 
+  path_provider: 
   # image_picker_web: any
 
 
